.provarCaches/00D6C0000000xA6UAI/objects/sked__Templated_Job_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>sked__Duration__c</fullName>
        <label>Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Notification_Type__c</fullName>
        <label>Notification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>push</fullName>
                </value>
                <value>
                    <fullName>sms</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Templated Job Allocations</relationshipLabel>
        <relationshipName>Templated_Job_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>sked__Start_Offset_Days__c</fullName>
        <label>Start Offset Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__Start_Time_Of_Day__c</fullName>
        <label>Start Time Of Day</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>sked__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Dispatch</fullName>
                    <default>true</default>
                    <label>Pending Dispatch</label>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>En Route</fullName>
                </value>
                <value>
                    <fullName>Checked In</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__Team_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Job__c</fullName>
        <label>Templated Job</label>
        <referenceTo>sked__Templated_Job__c</referenceTo>
        <relationshipLabel>Templated Job Allocations</relationshipLabel>
        <relationshipName>Templated_Job_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Templated_Resource_Requirement__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Templated Resource Requirement</label>
        <referenceTo>sked__Templated_Resource_Requirement__c</referenceTo>
        <relationshipLabel>Templated Job Allocations</relationshipLabel>
        <relationshipName>Templated_Job_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Templated Job Allocation</label>
    <nameField>
        <displayFormat>TJA-{0000}</displayFormat>
        <label>Templated Job Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sked__StartOffsetDaysNonNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNULL( sked__Start_Offset_Days__c ) ) , sked__Start_Offset_Days__c &lt; 0 )</errorConditionFormula>
        <errorDisplayField>sked__Start_Offset_Days__c</errorDisplayField>
        <errorMessage>Start Offset Days must be null or non-negative</errorMessage>
    </validationRules>
</CustomObject>